# security-tools

./: .gitignore  README.md  package.json
backend/: build_backend.py
backend/app/: main.py  repository.py  state.py
backend/app/core/: tester.py
backend/app/routers/: config.py  environments.py  projects.py  runs.py  tests.py
backend/app/services/: runner.py
frontend/: README.md  package.json  vite.config.ts
frontend/scripts/: prepare-desktop.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: desktop.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: EndpointEditor.tsx  EndpointTable.tsx  ExecutionControls.tsx  Header.tsx  LiveMonitor.tsx  MultipartEditor.tsx  PayloadEditor.tsx  Sidebar.tsx
frontend/src/components/dialogs/: EnvironmentsDialog.tsx  GlobalVarsDialog.tsx  ProjectDialog.tsx  ProjectSettingsDialog.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/hooks/: useRun.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: LandingPage.tsx
