[package]
name = "beacon"
version = "0.1.0"
description = "Beacon - API Workspace"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["shell-open"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
